# object-for-cpp

./: CMakeLists.txt  LICENSE  main.cpp  מטלת ריצה 1.docx
src/: main.cpp
src/Array/: BaseArray.h
src/Object/: Initialize.h  Object.h  Unique.h
src/Object/Array/: BaseArray.h
src/Object/Array/Sort/: MergeSorter.h  Sorter.h
src/Object/Random/: Random.cpp  Random.h
