cmake_minimum_required(VERSION 3.16)
project(ColmanMivneiNetunimEx1)

set(CMAKE_CXX_STANDARD 14)

add_executable(ColmanMivneiNetunimEx1 src/main.cpp src/Object/Array/BaseArray.h src/Object/Unique.h src/Object/Object.h src/Object/Initialize/Random/Random.h src/Object/Initialize/Random/Random.cpp src/Object/Initialize/Initialize.h src/Object/Array/Sort/Sorter.h src/Object/Array/Sort/MergeSorter.h)